--- a/manual/errfailure.html
+++ b/manual/errfailure.html
@@ -47,7 +47,7 @@
                     <img src="../Images/bars.svg" alt=""> 
                 </div>
                 <div class="title">
-                    <h1>Manual Testing - What is Software Testing?</h1>
+                    <h1>Manual Testing - Error, Defect/Bug, Failure</h1>
                 </div>
             </div>
            <div class="menu-two-parts">
@@ -105,11 +105,13 @@
                 </ul>
             </div>
             <div class="menucontent">
-                    <h2>What is Software Testing?</h2>
-                    <p>1. Software Testing is the part of Software Development process..</p>
-                    <p>2. Software Testing is an activity to detecting the defects.</p>
-                    <p>3. Software Testing is an Objective / Motive is to release the quality software to the client.</p>
-                    <p>4. To ensure the client about the completeness and correctness of the software application.</p>
+                    <h2>Error, Defect/Bug, Failure</h2>
+                    <h4>Error</h4>
+                    <p>Any incorrect human action that produces a problem in the system is called as an <b>Error</b>. </p>
+                    <h4>Defect/Bug</h4>
+                    <p>Deviation from the expected behavior to actual behavior of the system is called as <b>Defect</b>.</p>
+                    <h4>Failure</h4>
+                    <p>The deviation identified by the end-user while using the system is called as <b>Failure</b> </p>
                     <div class="arrows">
                         <div><a href="./whatsoft.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                         <div><a href=""><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
