--- a/manual/objectives.html
+++ b/manual/objectives.html
@@ -47,7 +47,7 @@
                     <img src="../Images/bars.svg" alt=""> 
                 </div>
                 <div class="title">
-                    <h1>Manual Testing - What is Software Testing?</h1>
+                    <h1>Manual Testing - Objectives/Motive of Software Testing</h1>
                 </div>
             </div>
            <div class="menu-two-parts">
@@ -105,14 +105,16 @@
                 </ul>
             </div>
             <div class="menucontent">
-                    <h2>What is Software Testing?</h2>
-                    <p>1. Software Testing is the part of Software Development process..</p>
-                    <p>2. Software Testing is an activity to detecting the defects.</p>
-                    <p>3. Software Testing is an Objective / Motive is to release the quality software to the client.</p>
-                    <p>4. To ensure the client about the completeness and correctness of the software application.</p>
+                    <h2>Objectives/Motive of Software Testing</h2>
+                    <p><b>1.</b>To prevent defects</p>
+                    <p><b>2.</b>Finding the defects that may get created by the programmer while developing the software application.</p>
+                    <p><b>3.</b>Helps to provide the quality product.</p>
+                    <p><b>4.</b>To ensure that it satisfies BRS/SRS(Business Requirement Specification/ Software Requirement Specification).</p>
+                    <p><b>5.</b>To ensure that the result meets the business and user requirements.</p>
+                    <p><b>6.</b>Gaining confidence and providing information about the level of quality.</p>
                     <div class="arrows">
-                        <div><a href="./whatsoft.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
-                        <div><a href=""><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./necessity.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="quality.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                     </div>
                     
             </div>
