--- a/manual/projvsprod.html
+++ b/manual/projvsprod.html
@@ -47,7 +47,7 @@
                     <img src="../Images/bars.svg" alt=""> 
                 </div>
                 <div class="title">
-                    <h1>Manual Testing - What is Software Testing?</h1>
+                    <h1>Manual Testing - Project Vs Product</h1>
                 </div>
             </div>
            <div class="menu-two-parts">
@@ -105,14 +105,14 @@
                 </ul>
             </div>
             <div class="menucontent">
-                    <h2>What is Software Testing?</h2>
-                    <p>1. Software Testing is the part of Software Development process..</p>
-                    <p>2. Software Testing is an activity to detecting the defects.</p>
-                    <p>3. Software Testing is an Objective / Motive is to release the quality software to the client.</p>
-                    <p>4. To ensure the client about the completeness and correctness of the software application.</p>
+                    <h2>Project  Vs  Product</h2>
+                    <h4>Project</h4>
+                    <p>If a software application is developed for 'specific customer' on requirement then it is called as <b>Project</b>. </p>
+                    <h4>Product</h4>
+                    <p>If a software application is developed for 'multiple customers' on market requirement then it is called as <b>Product</b>. </p>
                     <div class="arrows">
-                        <div><a href="./whatsoft.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
-                        <div><a href=""><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./quality.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./errfailure.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                     </div>
                     
             </div>
