--- a/manual/quality.html
+++ b/manual/quality.html
@@ -47,7 +47,7 @@
                     <img src="../Images/bars.svg" alt=""> 
                 </div>
                 <div class="title">
-                    <h1>Manual Testing - What is Software Testing?</h1>
+                    <h1>Manual Testing - Software Quality</h1>
                 </div>
             </div>
            <div class="menu-two-parts">
@@ -105,14 +105,18 @@
                 </ul>
             </div>
             <div class="menucontent">
-                    <h2>What is Software Testing?</h2>
-                    <p>1. Software Testing is the part of Software Development process..</p>
-                    <p>2. Software Testing is an activity to detecting the defects.</p>
-                    <p>3. Software Testing is an Objective / Motive is to release the quality software to the client.</p>
-                    <p>4. To ensure the client about the completeness and correctness of the software application.</p>
+                    <h2>Software Quality</h2>
+                    <p>Quality is defined as justification of all the requirements of a custemer in a product</p>
+                    <p><b>Note:</b> Quality is not defined a product, it is defined in customer's mind.</p>
+                    <h4>What defines the Quality?</h4>
+                    <p><b>1.</b> Bugfree.</p>
+                    <p><b>2.</b> Delivered on time.</p>
+                    <p><b>3.</b> Within Budget.</p>
+                    <p><b>4.</b> Meets the customer requirements and/or expectations.</p>
+                    <p><b>5.</b> Maintainable.</p>
                     <div class="arrows">
-                        <div><a href="./whatsoft.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
-                        <div><a href=""><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./objectives.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="projvsprod.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                     </div>
                     
             </div>
