--- a/manual/errfailure.html
+++ b/manual/errfailure.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./Images/api_FILL0_wght400_GRAD0_opsz48.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../Images/api_FILL0_wght400_GRAD0_opsz48.svg" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/navbar.css">
     <link rel="stylesheet" href="../CSS/sidebar.css">
@@ -113,8 +113,8 @@
                     <h4>Failure</h4>
                     <p>The deviation identified by the end-user while using the system is called as <b>Failure</b> </p>
                     <div class="arrows">
-                        <div><a href="./whatsoft.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
-                        <div><a href=""><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./projvsprod.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./whybugs.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                     </div>
                     
             </div>
