--- a/manual/whybugs.html
+++ b/manual/whybugs.html
@@ -47,7 +47,7 @@
                     <img src="../Images/bars.svg" alt=""> 
                 </div>
                 <div class="title">
-                    <h1>Manual Testing - What is Software Testing?</h1>
+                    <h1>Manual Testing - Why the Software has bugs?</h1>
                 </div>
             </div>
            <div class="menu-two-parts">
@@ -105,14 +105,15 @@
                 </ul>
             </div>
             <div class="menucontent">
-                    <h2>What is Software Testing?</h2>
-                    <p>1. Software Testing is the part of Software Development process..</p>
-                    <p>2. Software Testing is an activity to detecting the defects.</p>
-                    <p>3. Software Testing is an Objective / Motive is to release the quality software to the client.</p>
-                    <p>4. To ensure the client about the completeness and correctness of the software application.</p>
+                    <h2>Why the Software has bugs?</h2>
+                    <p><b>1.</b>Miscommunication or no communication</p>
+                    <p><b>2.</b>Software complexity</p>
+                    <p><b>3.</b>Programming Errors</p>
+                    <p><b>4.</b>Changing Requirements</p>
+                    <p><b>5.</b>Lack of skilled Testers</p>
                     <div class="arrows">
-                        <div><a href="./whatsoft.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
-                        <div><a href=""><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./errfailure.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./sdlc.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                     </div>
                     
             </div>
