--- a/manual/sdlc.html
+++ b/manual/sdlc.html
@@ -199,7 +199,49 @@
                          <li>Database tables, which include type and size.</li>
                         </ol>
                      </p>
-                    <div class="arrows">
+                    <h4>4. Development/Coding</h4>
+                    <p>
+                        <ol>
+                         <li>Once the system design phase is over, the next phase is coding.</li>
+                         <li>In this phase, developers start to build the entire system by writing code using the chosen programming language.</li>
+                         <li>In the coding phase, tasks ar divided into units or modules and assigned to the various developers.</li>
+                         <li>It is the longest phase of the Software Development Life Cycle process. </li>
+                         <li>In this phase, the developer needs to follow certain predefiened coding guidelines.</li>
+                        </ol>
+                     </p>
+                     <h5>Developers</h5>
+                     <p> Build - Code is ready for Testing.</p>
+                     <h4>5. Testing</h4>
+                     <p>
+                        <ol>
+                         <li>Once the software is complete, It is deployed in the testing environment. The testing team starts testing the functinality of the entire system. This is done to verify that the entire application works according to the custormer's requirements.</li>
+                         <li>During this phase, QA and testing team may find some bugs/defects which they communicate to developers.</li>
+                         <li>Then development team fixes the bug and sends it back to QA for a retest.</li>
+                         <li>This process continues until the software is bug-free, stable and working according to the business needs of that system.</li>
+                        </ol>
+                     </p>
+                     <h5>QA (Quality Analyst)</h5>
+                     <p>
+                        <ol>
+                         <li>Test Document - It is done by Tester STLC starts here</li>
+                         <li>STLC stands Software Testing Life Cycle.</li>
+                        </ol>
+                     </p>
+                     <h4>6. Deployment</h4>
+                     <h5>Field Engineer, Site Engineer</h5>
+                     <p>User Manual - Tested Software is deployed at client side.</p>
+                     <h4>7. Maintainance</h4>
+                     <p>Once the system is deployed, and customers start using the developed system, the following three activies may occur:</p>
+                     <p>
+                        <ol>
+                         <li>Bug fixing : Bugs are reported because of some scenarios which are not tested at all.</li>
+                         <li>Upgrade: Upgrading the application to the newer versions of the Software.</li>
+                         <li>Enhancement: Adding some new features to the existing software.</li>
+                        </ol>
+                     </p>
+                     <p>If any defect is found by the end user or customer while using the product in live environment it will be handled by the maintainance team.</p>
+                     
+                     <div class="arrows">
                         <div><a href="./whybugs.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                         <div><a href="waterfall.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                     </div>
