--- a/manual/sdlc.html
+++ b/manual/sdlc.html
@@ -113,7 +113,7 @@
                         </ol> 
                     </P>
                     
-                    <img src="../Images/Manual_Images/pngwing.com.png" alt="" width="370px">
+                    <img src="../Images/Manual_Images/SDLC_BWC (1).png" alt="" width="370px">
                     <p>
                         <ol>
                          <li>Requirement Analysis</li>
