--- a/manual/necessity.html
+++ b/manual/necessity.html
@@ -106,13 +106,17 @@
             </div>
             <div class="menucontent">
                     <h2>Necessity of Software Testing?</h2>
-                    <p>1.  To avoid risks (prevent).</p>
-                    <p>2. To identify errors (detect)</p>
-                    <p>3. To avoid extra costs.</p>
-                    <p>4. To gain customer confidence.</p>
-                    <p>5. To optimize business.</p>
-                    <p>6. To accelerate software development.</p>
-                    <p>7.  To check software adoptability</p>
+                    <p>
+                        <ol>
+                            <li>To avoid risks (prevent).</li>
+                            <li>To identify errors (detect)</li>
+                            <li>To avoid extra costs.</li>
+                            <li>To gain customer confidence.</li>
+                            <li>To optimize business.</li>
+                            <li>To accelerate software development.</li>
+                            <li>To check software adoptability.</li>
+                        </ol>
+                    </p>
                     <div class="arrows">
                         <div><a href="./whattest.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                         <div><a href="./objectives.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
