--- a/manual/objectives.html
+++ b/manual/objectives.html
@@ -106,12 +106,17 @@
             </div>
             <div class="menucontent">
                     <h2>Objectives/Motive of Software Testing</h2>
-                    <p><b>1.</b>To prevent defects</p>
-                    <p><b>2.</b>Finding the defects that may get created by the programmer while developing the software application.</p>
-                    <p><b>3.</b>Helps to provide the quality product.</p>
-                    <p><b>4.</b>To ensure that it satisfies BRS/SRS(Business Requirement Specification/ Software Requirement Specification).</p>
-                    <p><b>5.</b>To ensure that the result meets the business and user requirements.</p>
-                    <p><b>6.</b>Gaining confidence and providing information about the level of quality.</p>
+                    <p>
+                        <ol>
+                            <li>To prevent defects</li>
+                            <li>Finding the defects that may get created by the programmer while developing the software application.</li>
+                            <li>Helps to provide the quality product.</li>
+                            <li>To ensure that it satisfies BRS/SRS(Business Requirement Specification/ Software Requirement Specification).</li>
+                            <li>To ensure that the result meets the business and user requirements.</li>
+                            <li>Gaining confidence and providing information about the level of quality.</li>
+                        </ol>
+                    </p>
+                    
                     <div class="arrows">
                         <div><a href="./necessity.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                         <div><a href="quality.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
