--- a/manual/quality.html
+++ b/manual/quality.html
@@ -109,11 +109,16 @@
                     <p>Quality is defined as justification of all the requirements of a custemer in a product</p>
                     <p><b>Note:</b> Quality is not defined a product, it is defined in customer's mind.</p>
                     <h4>What defines the Quality?</h4>
-                    <p><b>1.</b> Bugfree.</p>
-                    <p><b>2.</b> Delivered on time.</p>
-                    <p><b>3.</b> Within Budget.</p>
-                    <p><b>4.</b> Meets the customer requirements and/or expectations.</p>
-                    <p><b>5.</b> Maintainable.</p>
+                    <p>
+                        <ol>
+                            <li>Bugfree</li>
+                            <li>Delivered on time</li>
+                            <li>Within Budget</li>
+                            <li>Meets the customer requirements and/or expectations.</li>
+                            <li>Maintainable</li>
+                        </ol>
+                    </p>
+                   
                     <div class="arrows">
                         <div><a href="./objectives.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                         <div><a href="projvsprod.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
