--- a/manual/whattest.html
+++ b/manual/whattest.html
@@ -106,10 +106,15 @@
             </div>
             <div class="menucontent">
                     <h2>What is Software Testing?</h2>
-                    <p>1. Software Testing is the part of Software Development process..</p>
-                    <p>2. Software Testing is an activity to detecting the defects.</p>
-                    <p>3. Software Testing is an Objective / Motive is to release the quality software to the client.</p>
-                    <p>4. To ensure the client about the completeness and correctness of the software application.</p>
+                    <p>
+                        <ol>
+                            <li>Software Testing is the part of Software Development process.</li>
+                            <li>Software Testing is an activity to detecting the defects.</li>
+                            <li>Software Testing is an Objective / Motive is to release the quality software to the client.</li>
+                            <li>To ensure the client about the completeness and correctness of the software application.</li>
+                        </ol>
+                    </p>
+                    
                     <div class="arrows">
                         <div><a href="./whatsoft.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                         <div><a href="./necessity.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
