--- a/manual/whybugs.html
+++ b/manual/whybugs.html
@@ -106,11 +106,15 @@
             </div>
             <div class="menucontent">
                     <h2>Why the Software has bugs?</h2>
-                    <p><b>1.</b>Miscommunication or no communication</p>
-                    <p><b>2.</b>Software complexity</p>
-                    <p><b>3.</b>Programming Errors</p>
-                    <p><b>4.</b>Changing Requirements</p>
-                    <p><b>5.</b>Lack of skilled Testers</p>
+                    <p>
+                        <ol>
+                            <li>Miscommunication or no communication</li>
+                            <li>Software complexity</li>
+                            <li>Programming Errors</li>
+                            <li>Changing Requirements</li>
+                            <li>Lack of skilled Testers</li>
+                        </ol>
+                    </p>
                     <div class="arrows">
                         <div><a href="./errfailure.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                         <div><a href="./sdlc.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
