--- a/manual/sdlc.html
+++ b/manual/sdlc.html
@@ -240,7 +240,15 @@
                         </ol>
                      </p>
                      <p>If any defect is found by the end user or customer while using the product in live environment it will be handled by the maintainance team.</p>
-                     
+                     <h4>Types of SDLC</h4>
+
+                     <p>
+                        There are 2 types
+                       <ol>
+                            <li>Incremental</li>
+                            <li>Iterative</li>
+                        </ol>
+                     </p>
                      <div class="arrows">
                         <div><a href="./whybugs.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                         <div><a href="waterfall.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
