--- a/manual/waterfall.html
+++ b/manual/waterfall.html
@@ -47,7 +47,7 @@
                     <img src="../Images/bars.svg" alt=""> 
                 </div>
                 <div class="title">
-                    <h1>Manual Testing - What is Software Testing?</h1>
+                    <h1>Manual Testing - Waterfall</h1>
                 </div>
             </div>
            <div class="menu-two-parts">
@@ -105,14 +105,42 @@
                 </ul>
             </div>
             <div class="menucontent">
-                    <h2>What is Software Testing?</h2>
-                    <p>1. Software Testing is the part of Software Development process..</p>
-                    <p>2. Software Testing is an activity to detecting the defects.</p>
-                    <p>3. Software Testing is an Objective / Motive is to release the quality software to the client.</p>
-                    <p>4. To ensure the client about the completeness and correctness of the software application.</p>
+                    <h2>Waterfall Model</h2>
+                    <img src="../Images/Manual_Images/Waterfall-3.png" alt="">
+                    <h4>Waterfall Model</h4>
+                    <p>Waterfall is one of the earliest and most commonly used software development models(processes), in which the development process looks like the flow, moving step by step through the phases like analysis, design, coding, testing, deployment/installation, and support. So, it is also known as the “Linear Sequential Model”. This SDLC model includes gradual execution of every stage completely. This process is strictly documented and predefined with features expected for every phase of this software development life cycle model.</p>
+                    <h4>Advantages of Waterfall Model</h4>
+                    <p>
+                        <ol>
+                            <li>Quality of the product will be good.</li>
+                            <li>Since Requirement changes are not allowed, chances of finding bugs will be less.</li>
+                            <li>Initial investment is less since the testers are hired at the later stages. </li>
+                            <li>Preferred for small projects where requirements are feezed.</li>
+                        </ol>
+                    </p>
+                    <h4>Disadvantages of Waterfall Model</h4>
+                    <p>
+                        <ol>
+                            <li>Requirement changes are not allowed.</li>
+                            <li>If there is defect in Requirement that will be continued in later phases. </li>
+                            <li>Total investment is more because time taking for rework on defect is time consuming which leads to high   
+                                investment.</li>
+                            <li>Testing will start only after coding.</li>
+                        </ol>
+                    </p>
+                    <h4>Why Waterfall Model</h4>
+                    <p>
+                        <ol>
+                            <li>The requirement are precisely documented.</li>
+                            <li>Product definition is stable.</li>
+                            <li>The technologies stack is predefined which makes it not dynamic.</li>
+                            <li>No ambiguous (doubtful) requirements.</li>
+                            <li>The project is short.</li>
+                        </ol>
+                    </p>
                     <div class="arrows">
-                        <div><a href="./whatsoft.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
-                        <div><a href=""><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./sdlc.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./vmodel.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                     </div>
                     
             </div>
