--- a/index.html
+++ b/index.html
@@ -68,15 +68,18 @@
         </div>
     </aside>    
     <!-- Sidebar Section Ends -->
-    <div id="slider">
+   
+    <!-- <div id="slider" >
         <figure>
             <img src="./imagesliders/1.png" alt="">
             <img src="./imagesliders/2.jpg" alt="">
             <img src="./imagesliders/3.jpg" alt="">
             <img src="./imagesliders/4.jpg" alt="">
             <img src="./imagesliders/5.jpg" alt="">
-            <!-- <img src="./imagesliders/6.jpg" alt=""> -->
         </figure>
+    </div> -->
+    <div class="middle-image">
+        <img src="./imagesliders/1.png" alt="">
     </div>
     <!-- Footer Seciton Starts -->
     <footer class="footer-container">
