--- a/manual.html
+++ b/manual.html
@@ -103,6 +103,8 @@
                         <li><a href="./manual/scrumterminology.html" class="nav-link">Scrum Terminology</a></li>
                         <li><a href="./manual/scrumboard.html" class="nav-link">Scrum Board</a></li>
                         <li><a href="./manual/dordod.html" class="nav-link">DoR and DoD</a></li>
+                        <li><a href="./manual/dordod.html" class="nav-link">DoR and DoD</a></li>
+                        <li><a href="./manual/dordod.html" class="nav-link">DoR and DoD</a></li>
                     </ul>
                 </div>
                 <!-- <div class="right-image">
@@ -179,6 +181,9 @@
                         <li><a href="./manual/scrumterminology.html" class="nav-link">Scrum Terminology</a></li>
                         <li><a href="./manual/scrumboard.html" class="nav-link">Scrum Board</a></li>
                         <li><a href="./manual/dordod.html" class="nav-link">DoR and DoD</a></li>
+                        <li><a href="./manual/dordod.html" class="nav-link">DoR and DoD</a></li>
+                        <li><a href="./manual/dordod.html" class="nav-link">DoR and DoD</a></li>
+                    
                     </ul>
                 </div>
             </div>
