--- a/manual.html
+++ b/manual.html
@@ -41,7 +41,7 @@
 
     <!-- Header Section starts -->
     <header class="menu-nav">
-        <div  class="menu-main wrapper">
+        <div  class="menu-main ">
             <div class="two">
                 <div class="menu-hamburger">
                     <img src="./Images/bars.svg" alt=""> 
@@ -50,7 +50,7 @@
                     <h1>Manual Testing</h1>
                 </div>
             </div>
-            <div class="menu-center wrapper">
+            <div class="menu-center ">
                 <div class="menu-links-main">
                     <ul class="menu-nav-links">
                         <li><a href="" class="nav-link active">Home</a></li> 
@@ -102,8 +102,6 @@
                         <li><a href="./manual/scrum.html" class="nav-link">Scrum</a></li>
                         <li><a href="./manual/scrumterminology.html" class="nav-link">Scrum Terminology</a></li>
                         <li><a href="./manual/scrumboard.html" class="nav-link">Scrum Board</a></li>
-                        <li><a href="./manual/dordod.html" class="nav-link">DoR and DoD</a></li>
-                        <li><a href="./manual/dordod.html" class="nav-link">DoR and DoD</a></li>
                         <li><a href="./manual/dordod.html" class="nav-link">DoR and DoD</a></li>
                     </ul>
                 </div>
