--- a/manual/vmodel.html
+++ b/manual/vmodel.html
@@ -47,14 +47,14 @@
                     <img src="../Images/bars.svg" alt=""> 
                 </div>
                 <div class="title">
-                    <h1>Manual Testing - What is Software Testing?</h1>
+                    <h1>Manual Testing - V Model</h1>
                 </div>
             </div>
            <div class="menu-two-parts">
             <div class="menu-links-main">
                 <ul class="menu-nav-links">
                     <li><a href="../manual.html" class="nav-link ">Home</a></li> 
-                        <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
+                        <li><a href="./whatsoft.html" class="nav-link ">What is Software?</a></li>
                         <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
                         <li><a href="./necessity.html" class="nav-link">Necessity of Software Testing?</a></li>
                         <li><a href="./objectives.html" class="nav-link">Objectives/Motive of Software Testing</a></li>
@@ -64,7 +64,7 @@
                         <li><a href="./whybugs.html" class="nav-link">Why the Software has bugs?</a></li>
                         <li><a href="./sdlc.html" class="nav-link">SDLC</a></li>
                         <li><a href="./waterfall.html" class="nav-link">Waterfall Model</a></li>
-                        <li><a href="./vmodel.html" class="nav-link">V Model</a></li>
+                        <li><a href="./vmodel.html" class="nav-link active">V Model</a></li>
                         <li><a href="./vervsval.html" class="nav-link">Verification Vs Validation</a></li>
                         <li><a href="./testmeth.html" class="nav-link">Testing Methodologies</a></li>
                         <li><a href="./staticvsdynamic.html" class="nav-link">Static Testing Vs Dynamic Testing</a></li>
@@ -105,14 +105,35 @@
                 </ul>
             </div>
             <div class="menucontent">
-                    <h2>What is Software Testing?</h2>
-                    <p>1. Software Testing is the part of Software Development process..</p>
-                    <p>2. Software Testing is an activity to detecting the defects.</p>
-                    <p>3. Software Testing is an Objective / Motive is to release the quality software to the client.</p>
-                    <p>4. To ensure the client about the completeness and correctness of the software application.</p>
+                    <h2>V -  Model</h2>
+                    <img src="../Images/Manual_Images/v-shape-model.png" alt="">
+                    <img src="../Images/Manual_Images/vmodel2.jpg" alt="">
+                    <h4>Advantages of V Model</h4>
+                    <p>Testing is involved in each and every phase.</p>
+                    <h4>Disadvantages of V Model</h4>
+                    <p>
+                        <ol>
+                            <li>Documentation is more.</li>
+                            <li>Initial investment is more.</li>
+                        </ol> 
+                    </p>
+                    <h4>Verification V/S Validation</h4>
+                    <p>Verification checks whether we are building the right product</p>
+                    <p>
+                        <ol>
+                            <li>Focus on Documentation</li>
+                            <li>Verification typically involves
+                            <ol>
+                                <li>Reviews</li>
+                                <li>Walkthroughs</li>
+                                <li>Inspections</li>
+                            </ol></li>
+                        </ol>
+                    </p>
+                    <p></p>
                     <div class="arrows">
-                        <div><a href="./whatsoft.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
-                        <div><a href=""><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./waterfall.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./vervsval.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                     </div>
                     
             </div>
