--- a/manual/sdlc.html
+++ b/manual/sdlc.html
@@ -18,7 +18,7 @@
     <nav class="nav-container">
         <div class="nav-center wrapper">
             <div class="logo-section">
-                <a href="./">
+                <a href="../index.html">
                     <img src="../Images/api_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                 </a>
             </div>
