--- a/manual/errfailure.html
+++ b/manual/errfailure.html
@@ -41,7 +41,7 @@
 
     <!-- Header Section starts -->
     <header class="menu-nav">
-        <div  class="menu-main wrapper">
+        <div  class="menu-main">
             <div class="two">
                 <div class="menu-hamburger">
                     <img src="../Images/bars.svg" alt=""> 
@@ -54,13 +54,13 @@
             <div class="menu-links-main">
                 <ul class="menu-nav-links">
                     <li><a href="../manual.html" class="nav-link ">Home</a></li> 
-                        <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
+                        <li><a href="./whatsoft.html" class="nav-link">What is Software?</a></li>
                         <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
                         <li><a href="./necessity.html" class="nav-link">Necessity of Software Testing?</a></li>
                         <li><a href="./objectives.html" class="nav-link">Objectives/Motive of Software Testing</a></li>
                         <li><a href="./quality.html" class="nav-link">Software Quality</a></li>
                         <li><a href="./projvsprod.html" class="nav-link">Project Vs Product</a></li>
-                        <li><a href="./errfailure.html" class="nav-link">Error, Defect/Bug, Failure</a></li>
+                        <li><a href="./errfailure.html" class="nav-link active">Error, Defect/Bug, Failure</a></li>
                         <li><a href="./whybugs.html" class="nav-link">Why the Software has bugs?</a></li>
                         <li><a href="./sdlc.html" class="nav-link">SDLC</a></li>
                         <li><a href="./waterfall.html" class="nav-link">Waterfall Model</a></li>
