--- a/manual/whattest.html
+++ b/manual/whattest.html
@@ -41,7 +41,7 @@
 
     <!-- Header Section starts -->
     <header class="menu-nav">
-        <div  class="menu-main wrapper">
+        <div  class="menu-main">
             <div class="two">
                 <div class="menu-hamburger">
                     <img src="../Images/bars.svg" alt=""> 
@@ -54,8 +54,8 @@
             <div class="menu-links-main">
                 <ul class="menu-nav-links">
                     <li><a href="../manual.html" class="nav-link ">Home</a></li> 
-                        <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
-                        <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
+                        <li><a href="./whatsoft.html" class="nav-link">What is Software?</a></li>
+                        <li><a href="./whattest.html" class="nav-link active">What is Software testing?</a></li>
                         <li><a href="./necessity.html" class="nav-link">Necessity of Software Testing?</a></li>
                         <li><a href="./objectives.html" class="nav-link">Objectives/Motive of Software Testing</a></li>
                         <li><a href="./quality.html" class="nav-link">Software Quality</a></li>
@@ -143,9 +143,9 @@
                 <div class="menu-links-main">
                     <ul class="menu-links">
                         <li><a href="../manual.html" class="nav-link ">Home</a></li> 
-                        <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
+                        <li><a href="./whatsoft.html" class="nav-link">What is Software?</a></li>
                         <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
-                        <li><a href="./necessity.html" class="nav-link">Necessity of Software Testing?</a></li>
+                        <li><a href="./necessity.html" class="nav-link active">Necessity of Software Testing?</a></li>
                         <li><a href="./objectives.html" class="nav-link">Objectives/Motive of Software Testing</a></li>
                         <li><a href="./quality.html" class="nav-link">Software Quality</a></li>
                         <li><a href="./projvsprod.html" class="nav-link">Project Vs Product</a></li>
