--- a/manual/vmodel.html
+++ b/manual/vmodel.html
@@ -41,7 +41,7 @@
 
     <!-- Header Section starts -->
     <header class="menu-nav">
-        <div  class="menu-main wrapper">
+        <div  class="menu-main">
             <div class="two">
                 <div class="menu-hamburger">
                     <img src="../Images/bars.svg" alt=""> 
@@ -159,7 +159,7 @@
                 <div class="menu-links-main">
                     <ul class="menu-links">
                         <li><a href="../manual.html" class="nav-link ">Home</a></li> 
-                        <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
+                        <li><a href="./whatsoft.html" class="nav-link">What is Software?</a></li>
                         <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
                         <li><a href="./necessity.html" class="nav-link">Necessity of Software Testing?</a></li>
                         <li><a href="./objectives.html" class="nav-link">Objectives/Motive of Software Testing</a></li>
@@ -169,7 +169,7 @@
                         <li><a href="./whybugs.html" class="nav-link">Why the Software has bugs?</a></li>
                         <li><a href="./sdlc.html" class="nav-link">SDLC</a></li>
                         <li><a href="./waterfall.html" class="nav-link">Waterfall Model</a></li>
-                        <li><a href="./vmodel.html" class="nav-link">V Model</a></li>
+                        <li><a href="./vmodel.html" class="nav-link active">V Model</a></li>
                         <li><a href="./vervsval.html" class="nav-link">Verification Vs Validation</a></li>
                         <li><a href="./testmeth.html" class="nav-link">Testing Methodologies</a></li>
                         <li><a href="./staticvsdynamic.html" class="nav-link">Static Testing Vs Dynamic Testing</a></li>
