--- a/manual/quality.html
+++ b/manual/quality.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./Images/api_FILL0_wght400_GRAD0_opsz48.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../Images/api_FILL0_wght400_GRAD0_opsz48.svg" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/navbar.css">
     <link rel="stylesheet" href="../CSS/sidebar.css">
@@ -41,7 +41,7 @@
 
     <!-- Header Section starts -->
     <header class="menu-nav">
-        <div  class="menu-main wrapper">
+        <div  class="menu-main">
             <div class="two">
                 <div class="menu-hamburger">
                     <img src="../Images/bars.svg" alt=""> 
@@ -54,11 +54,11 @@
             <div class="menu-links-main">
                 <ul class="menu-nav-links">
                     <li><a href="../manual.html" class="nav-link ">Home</a></li> 
-                        <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
+                        <li><a href="./whatsoft.html" class="nav-link">What is Software?</a></li>
                         <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
                         <li><a href="./necessity.html" class="nav-link">Necessity of Software Testing?</a></li>
                         <li><a href="./objectives.html" class="nav-link">Objectives/Motive of Software Testing</a></li>
-                        <li><a href="./quality.html" class="nav-link">Software Quality</a></li>
+                        <li><a href="./quality.html" class="nav-link active">Software Quality</a></li>
                         <li><a href="./projvsprod.html" class="nav-link">Project Vs Product</a></li>
                         <li><a href="./errfailure.html" class="nav-link">Error, Defect/Bug, Failure</a></li>
                         <li><a href="./whybugs.html" class="nav-link">Why the Software has bugs?</a></li>
@@ -147,11 +147,11 @@
                 <div class="menu-links-main">
                     <ul class="menu-links">
                         <li><a href="../manual.html" class="nav-link ">Home</a></li> 
-                        <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
+                        <li><a href="./whatsoft.html" class="nav-link">What is Software?</a></li>
                         <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
                         <li><a href="./necessity.html" class="nav-link">Necessity of Software Testing?</a></li>
                         <li><a href="./objectives.html" class="nav-link">Objectives/Motive of Software Testing</a></li>
-                        <li><a href="./quality.html" class="nav-link">Software Quality</a></li>
+                        <li><a href="./quality.html" class="nav-link active">Software Quality</a></li>
                         <li><a href="./projvsprod.html" class="nav-link">Project Vs Product</a></li>
                         <li><a href="./errfailure.html" class="nav-link">Error, Defect/Bug, Failure</a></li>
                         <li><a href="./whybugs.html" class="nav-link">Why the Software has bugs?</a></li>
