--- a/manual.html
+++ b/manual.html
@@ -105,9 +105,13 @@
                         <li><a href="./manual/dordod.html" class="nav-link">DoR and DoD</a></li>
                     </ul>
                 </div>
-                <!-- <div class="right-image">
+                <div class="right-image">
                             <img src="./Images/Mannual-Testing.jpg" alt="">                
-                </div> -->
+                </div>
+                <div class=" right-image-text">
+                    <h1 >Manual Testing Tutorials</h1>
+                </div>
+                    
             </div>
             
         </div>
