--- a/manual/7principles.html
+++ b/manual/7principles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./Images/api_FILL0_wght400_GRAD0_opsz48.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../Images/api_FILL0_wght400_GRAD0_opsz48.svg" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/navbar.css">
     <link rel="stylesheet" href="../CSS/sidebar.css">
@@ -41,20 +41,20 @@
 
     <!-- Header Section starts -->
     <header class="menu-nav">
-        <div  class="menu-main wrapper">
+        <div  class="menu-main">
             <div class="two">
                 <div class="menu-hamburger">
                     <img src="../Images/bars.svg" alt=""> 
                 </div>
                 <div class="title">
-                    <h1>Manual Testing - What is Software Testing?</h1>
+                    <h1>Manual Testing - 7 Principles</h1>
                 </div>
             </div>
            <div class="menu-two-parts">
             <div class="menu-links-main">
                 <ul class="menu-nav-links">
                     <li><a href="../manual.html" class="nav-link ">Home</a></li> 
-                        <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
+                        <li><a href="./whatsoft.html" class="nav-link">What is Software?</a></li>
                         <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
                         <li><a href="./necessity.html" class="nav-link">Necessity of Software Testing?</a></li>
                         <li><a href="./objectives.html" class="nav-link">Objectives/Motive of Software Testing</a></li>
@@ -96,7 +96,7 @@
                         <li><a href="./defectresolution.html" class="nav-link">Defect Resolution</a></li>
                         <li><a href="./buglifecycle.html" class="nav-link">Bug Life Cycle </a></li>
                         <li><a href="./qaactivities.html" class="nav-link">QA/Testing Activities</a></li>
-                        <li><a href="./7principles.html" class="nav-link">7 Principles of Software Testing</a></li>
+                        <li><a href="./7principles.html" class="nav-link active">7 Principles of Software Testing</a></li>
                         <li><a href="./agilemodel.html" class="nav-link">Agile Model</a></li>
                         <li><a href="./scrum.html" class="nav-link">Scrum</a></li>
                         <li><a href="./scrumterminology.html" class="nav-link">Scrum Terminology</a></li>
@@ -105,14 +105,14 @@
                 </ul>
             </div>
             <div class="menucontent">
-                    <h2>What is Software Testing?</h2>
+                    <h2>7 Principles</h2>
                     <p>1. Software Testing is the part of Software Development process..</p>
                     <p>2. Software Testing is an activity to detecting the defects.</p>
                     <p>3. Software Testing is an Objective / Motive is to release the quality software to the client.</p>
                     <p>4. To ensure the client about the completeness and correctness of the software application.</p>
                     <div class="arrows">
-                        <div><a href="./whatsoft.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
-                        <div><a href=""><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./qaactivities.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
+                        <div><a href="./agilemodel.htmls"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                     </div>
                     
             </div>
@@ -138,7 +138,7 @@
                 <div class="menu-links-main">
                     <ul class="menu-links">
                         <li><a href="../manual.html" class="nav-link ">Home</a></li> 
-                        <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
+                        <li><a href="./whatsoft.html" class="nav-link">What is Software?</a></li>
                         <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
                         <li><a href="./necessity.html" class="nav-link">Necessity of Software Testing?</a></li>
                         <li><a href="./objectives.html" class="nav-link">Objectives/Motive of Software Testing</a></li>
@@ -180,7 +180,7 @@
                         <li><a href="./defectresolution.html" class="nav-link">Defect Resolution</a></li>
                         <li><a href="./buglifecycle.html" class="nav-link">Bug Life Cycle </a></li>
                         <li><a href="./qaactivities.html" class="nav-link">QA/Testing Activities</a></li>
-                        <li><a href="./7principles.html" class="nav-link">7 Principles of Software Testing</a></li>
+                        <li><a href="./7principles.html" class="nav-link active">7 Principles of Software Testing</a></li>
                         <li><a href="./agilemodel.html" class="nav-link">Agile Model</a></li>
                         <li><a href="./scrum.html" class="nav-link">Scrum</a></li>
                         <li><a href="./scrumterminology.html" class="nav-link">Scrum Terminology</a></li>
