--- a/manual/vervsval.html
+++ b/manual/vervsval.html
@@ -41,13 +41,13 @@
 
     <!-- Header Section starts -->
     <header class="menu-nav">
-        <div  class="menu-main wrapper">
+        <div  class="menu-main">
             <div class="two">
                 <div class="menu-hamburger">
                     <img src="../Images/bars.svg" alt=""> 
                 </div>
                 <div class="title">
-                    <h1>Manual Testing - What is Software Testing?</h1>
+                    <h1>Manual Testing - Verification V/S Validation</h1>
                 </div>
             </div>
            <div class="menu-two-parts">
