--- a/manual/sdlc.html
+++ b/manual/sdlc.html
@@ -277,7 +277,7 @@
                 <div class="menu-links-main">
                     <ul class="menu-links">
                         <li><a href="../manual.html" class="nav-link ">Home</a></li> 
-                        <li><a href="./whatsoft.html" class="nav-link active">What is Software?</a></li>
+                        <li><a href="./whatsoft.html" class="nav-link">What is Software?</a></li>
                         <li><a href="./whattest.html" class="nav-link">What is Software testing?</a></li>
                         <li><a href="./necessity.html" class="nav-link">Necessity of Software Testing?</a></li>
                         <li><a href="./objectives.html" class="nav-link">Objectives/Motive of Software Testing</a></li>
@@ -285,7 +285,7 @@
                         <li><a href="./projvsprod.html" class="nav-link">Project Vs Product</a></li>
                         <li><a href="./errfailure.html" class="nav-link">Error, Defect/Bug, Failure</a></li>
                         <li><a href="./whybugs.html" class="nav-link">Why the Software has bugs?</a></li>
-                        <li><a href="./sdlc.html" class="nav-link">SDLC</a></li>
+                        <li><a href="./sdlc.html" class="nav-link active">SDLC</a></li>
                         <li><a href="./waterfall.html" class="nav-link">Waterfall Model</a></li>
                         <li><a href="./vmodel.html" class="nav-link">V Model</a></li>
                         <li><a href="./vervsval.html" class="nav-link">Verification Vs Validation</a></li>
