--- a/manual/vmodel.html
+++ b/manual/vmodel.html
@@ -130,7 +130,35 @@
                             </ol></li>
                         </ol>
                     </p>
-                    
+                   <p>2. Verification Techniques or Static Testing Techniques</p>
+                   <p style="color: red; background: black;">&nbsp;&nbsp;&nbsp;<b>2.1. Reviews</b> </p> 
+                   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Conducts on documents to ensure Correctness and Completeness</p>
+                   <p > 
+                        <ol> 
+                               <li style="margin-left: 30px;">Requirement Reviews</li> 
+                               <li style="margin-left: 30px;">Design Reviews</li> 
+                               <li style="margin-left: 30px;">Code Reviews</li> 
+                               <li style="margin-left: 30px;">Test Plan Reviews</li> 
+                               <li style="margin-left: 30px;">Test Cases Reviews etc..</li> 
+                        </ol>
+                    </p>
+                    <p style="color: red; background: black;">&nbsp;&nbsp;&nbsp; <b>2.2. Walkthrough</b> </p> 
+                    <p > 
+                        <ol> 
+                               <li style="margin-left: 30px;">It is informal review</li> 
+                               <li style="margin-left: 30px;">Author reads the documents or code and discuss with peers.</li> 
+                               <li style="margin-left: 30px;">It is not preplanner and can be done whenever required.</li> 
+                               <li style="margin-left: 30px;">Also, walkthrough does not have minutes of the meet.</li> 
+                        </ol>
+                    </p>
+                    <p style="color: red; background: black;">&nbsp;&nbsp;&nbsp; <b>2.3. Inspection</b></p> 
+                    <p > 
+                        <ol> 
+                               <li style="margin-left: 30px;">It’s a most formal review type</li> 
+                               <li style="margin-left: 30px;">In which at least 3-8 people will sit in the meeting 1-reader, 2-writer, 3-moderator plus concerned.</li> 
+                               <li style="margin-left: 30px;">Inspection will have a proper schedule which will be intimated via E-Mail to the concerned developer/ Tester.</li> 
+                        </ol>
+                    </p>
                     <div class="arrows">
                         <div><a href="./waterfall.html"><img src="../Images/arrow_back_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
                         <div><a href="./vervsval.html"><img src="../Images/arrow_forward_FILL0_wght400_GRAD0_opsz48.svg" alt=""></a></div>
