--- a/manual/whybugs.html
+++ b/manual/whybugs.html
@@ -150,7 +150,7 @@
                         <li><a href="./quality.html" class="nav-link">Software Quality</a></li>
                         <li><a href="./projvsprod.html" class="nav-link">Project Vs Product</a></li>
                         <li><a href="./errfailure.html" class="nav-link">Error, Defect/Bug, Failure</a></li>
-                        <li><a href="./whybugs.html" class="nav-link">Why the Software has bugs?</a></li>
+                        <li><a href="./whybugs.html" class="nav-link active">Why the Software has bugs?</a></li>
                         <li><a href="./sdlc.html" class="nav-link">SDLC</a></li>
                         <li><a href="./waterfall.html" class="nav-link">Waterfall Model</a></li>
                         <li><a href="./vmodel.html" class="nav-link">V Model</a></li>
